test/src/e2e_vm_tests/test_programs/should_fail/language/references/impl_reference_types/src/main.sw
script;

mod concrete_types;
mod ref_and_ref_mut;
mod ref_and_ref_mut_trait_impls;

fn main() {
    ::concrete_types::test();
    ::ref_and_ref_mut::test();
}
